# Taxer_sertificates_storage

./: .gitignore  pyproject.toml  pytest.ini  readme.md  readmy.md
.github/workflows/: playwright_tests.yml
builds/tests/: index.html
builds/tests/31/: index.html
builds/tests/31/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/31/export/: influxDbData.txt  prometheusData.txt
builds/tests/31/history/: history-trend.json  history.json
builds/tests/31/widgets/: behaviors.json  categories-trend.json  duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
builds/tests/32/: index.html
builds/tests/32/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/32/export/: influxDbData.txt  prometheusData.txt
builds/tests/32/history/: categories-trend.json
builds/tests/32/widgets/: duration.json  executors.json  severity.json  summary.json
builds/tests/last-history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
docs/bug-reports/: bug_reports.md
docs/checklists/: checklist.md
docs/requirements/: requirements.md
docs/test-cases/: test_cases.md
pages/: base_page.py  main_page.py  upload_page.py
tests/: config.py  conftest.py  test_details_tc_18.py  test_e2e_certificate_flow.py  test_e2e_details.py  test_initial_state_tc_01.py  test_navigation_tc_02.py  test_ui_indicators.py  test_ui_interactions.py  test_upload_tc_05.py
utils/: constants.py  logger.py
(+15 files in other folders)
